--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #020015;
+  background-image: url("/images/bg2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@font-face {
+  font-family: "Treasuremap";
+  src: url("../public/fonts/Treasuremap.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "EB Garamond";
+  src: url("../public/fonts/EBGaramond.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
