--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,3 +28,29 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+
+.shimmer {
+  text-align: center;
+  color: rgb(65, 28, 14, 0.1);
+  background: -webkit-gradient(linear, left top, right top, from(#411c0e), to(#411c0e), color-stop(0.5, #fff));
+  background: gradient(linear, left top, right top, from(#411c0e), to(#411c0e), color-stop(0.1, #fff));
+  background-size: 125px 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: shimmer 5s infinite;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-color: #411c0e;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: top left;
+  }
+  50% {
+    background-position: top right;
+  }
+  100% {
+    background-position: top left;
+  }
+}
