--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ body {
   animation: shimmer 5s infinite;
   background-repeat: no-repeat;
   background-position: 0 0;
-  background-color: #411c0e;
+  background-color: rgba(65, 28, 14, 0.8);
 }
 
 @keyframes shimmer {
