--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,3 +93,20 @@ body {
     padding: 13px 50px 13px;
   }
 }
+
+.glow {
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #F0E68C, 0 0 40px #F0E68C, 0 0 50px #F0E68C, 0 0 60px #F0E68C 0 0 70px #F0E68C;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #F2D2BD, 0 0 40px #C70039, 0 0 50px #C70039, 0 0 60px #C70039, 0 0 70px #C70039, 0 0 80px #C70039;
+  }
+}
