--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,3 +95,156 @@ body {
     padding: 13px 50px 13px;
   }
 }
+.history {
+  display: flex;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-width: 900px;
+  position: relative;
+}
+.content-title {
+  font-weight: normal;
+  font-size: 45px;
+  margin-top: -30px;
+  transition: 0.4s;
+  padding: 0 10px;
+  box-sizing: border-box;
+  color: #fff;
+}
+.btnt {
+  background-color: #002131;
+  border: 1px solid white;
+  padding: 10px;
+  color: white;
+  margin-bottom: 15px;
+}
+.content-desc {
+  margin: 0;
+  font-size: 15px;
+  box-sizing: border-box;
+  color: rgba(255, 255, 255, 1);
+  font-weight: normal;
+  line-height: 25px;
+}
+.history:before {
+  position: absolute;
+  left: 50%;
+  width: 2px;
+  height: 100%;
+  margin-left: -1px;
+  content: "";
+  background: rgba(255, 255, 255, 0.07);
+}
+@media only screen and (max-width: 767px) {
+  .history:before {
+    left: 40px;
+  }
+}
+.item {
+  padding: 40px 0;
+  opacity: 0.3;
+  filter: blur(2px);
+  transition: 0.5s;
+  box-sizing: border-box;
+  width: 70%;
+  position: relative;
+  transform: translateY(-80px);
+  margin-top: 30px;
+}
+.item:before {
+  content: attr(data-text);
+  letter-spacing: 3px;
+  width: 100%;
+  position: absolute;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 13px;
+  border-left: 2px solid rgba(255, 255, 255, 0.5);
+  top: 70%;
+  margin-top: -5px;
+  padding-left: 15px;
+  opacity: 0;
+  right: calc(-100% - 56px);
+}
+.item:nth-child(even) {
+  align-self: flex-end;
+}
+.item:nth-child(even):before {
+  right: auto;
+  text-align: right;
+  left: calc(-100% - 56px);
+  padding-left: 0;
+  border-left: none;
+  border-right: 2px solid rgba(255, 255, 255, 0.5);
+  padding-right: 15px;
+}
+.item--active {
+  opacity: 1;
+  transform: translateY(0);
+  filter: blur(0px);
+}
+.item--active:before {
+  top: 50%;
+  transition: 0.3s all 0.2s;
+  opacity: 1;
+}
+.item--active .content-title {
+  margin: 10px 0 20px 0;
+}
+@media only screen and (max-width: 767px) {
+  .item {
+    align-self: baseline !important;
+    width: 100%;
+    padding: 0 30px 150px 80px;
+  }
+  .item:before {
+    left: 10px !important;
+    padding: 0 !important;
+    top: 50px;
+    text-align: center !important;
+    width: 60px;
+    border: none !important;
+  }
+  .item:last-child {
+    padding-bottom: 40px;
+  }
+}
+.history__img {
+  max-width: 100%;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
+}
+.class-container {
+  width: 100%;
+  position: relative;
+  padding: 80px 0;
+  transition: 0.3s ease 0s;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.class-container:before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+}
+.header {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 80px;
+  position: relative;
+}
+.header__title {
+  color: #fff;
+  font-size: 46px;
+  font-weight: normal;
+  margin: 0;
+}
+.header__subtitle {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 16px;
+  letter-spacing: 5px;
+  margin: 10px 0 0 0;
+  font-weight: normal;
+}
