--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,19 @@ body {
   }
 }
 
+.clubitem{
+  animation: dropin 0.35s;
+}
+
+@keyframes dropin {
+  0%{
+    transform: scale(0);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
 .button {
   font-size: 16px;
   font-weight: 200;
