--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,7 @@ body {
   font-weight: 600;
   font-style: normal;
 }
+
 @font-face {
   font-family: "EB Garamond";
   src: url("../public/fonts/EBGaramond.ttf");
@@ -35,22 +36,8 @@ body {
 .shimmer {
   text-align: center;
   color: rgb(65, 28, 14, 0.1);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(#411c0e),
-    to(#411c0e),
-    color-stop(0.5, #fff)
-  );
-  background: gradient(
-    linear,
-    left top,
-    right top,
-    from(#411c0e),
-    to(#411c0e),
-    color-stop(0.1, #fff)
-  );
+  background: -webkit-gradient(linear, left top, right top, from(#411c0e), to(#411c0e), color-stop(0.5, #fff));
+  background: gradient(linear, left top, right top, from(#411c0e), to(#411c0e), color-stop(0.1, #fff));
   background-size: 125px 100%;
   -webkit-background-clip: text;
   background-clip: text;
@@ -64,9 +51,11 @@ body {
   0% {
     background-position: top left;
   }
+
   50% {
     background-position: top right;
   }
+
   100% {
     background-position: top left;
   }
@@ -80,6 +69,7 @@ body {
   0% {
     transform: scale(0);
   }
+
   100% {
     transform: scale(1);
   }
@@ -91,8 +81,8 @@ body {
   letter-spacing: 1px;
   padding: 13px 20px 13px;
   outline: 0;
-  color: #7e5936;
-  border: 2px solid #7e5936;
+  color: #7E5936;
+  border: 2px solid #7E5936;
   cursor: pointer;
   position: relative;
   background-color: rgba(0, 0, 0, 0);
@@ -123,6 +113,7 @@ body {
     padding: 13px 50px 13px;
   }
 }
+
 .history {
   display: flex;
   margin: 0 auto;
@@ -131,6 +122,7 @@ body {
   max-width: 900px;
   position: relative;
 }
+
 .content-title {
   font-weight: normal;
   font-size: 45px;
@@ -140,6 +132,7 @@ body {
   box-sizing: border-box;
   color: #fff;
 }
+
 .btnt {
   background-color: #002131;
   border: 1px solid white;
@@ -147,6 +140,7 @@ body {
   color: white;
   margin-bottom: 15px;
 }
+
 .content-desc {
   margin: 0;
   font-size: 15px;
@@ -155,6 +149,7 @@ body {
   font-weight: normal;
   line-height: 25px;
 }
+
 .history:before {
   position: absolute;
   left: 50%;
@@ -164,11 +159,13 @@ body {
   content: "";
   background: rgba(255, 255, 255, 0.07);
 }
+
 @media only screen and (max-width: 767px) {
   .history:before {
     left: 40px;
   }
 }
+
 .item {
   padding: 40px 0;
   opacity: 0.3;
@@ -180,6 +177,7 @@ body {
   transform: translateY(-80px);
   margin-top: 30px;
 }
+
 .item:before {
   content: attr(data-text);
   letter-spacing: 3px;
@@ -194,9 +192,11 @@ body {
   opacity: 0;
   right: calc(-100% - 56px);
 }
+
 .item:nth-child(even) {
   align-self: flex-end;
 }
+
 .item:nth-child(even):before {
   right: auto;
   text-align: right;
@@ -206,24 +206,29 @@ body {
   border-right: 2px solid rgba(255, 255, 255, 0.5);
   padding-right: 15px;
 }
+
 .item--active {
   opacity: 1;
   transform: translateY(0);
   filter: blur(0px);
 }
+
 .item--active:before {
   top: 50%;
   transition: 0.3s all 0.2s;
   opacity: 1;
 }
+
 .item--active .content-title {
   margin: 10px 0 20px 0;
 }
+
 @media only screen and (max-width: 767px) {
   .item {
     align-self: baseline !important;
     width: 100%;
   }
+
   .item:before {
     left: 10px !important;
     padding: 0 !important;
@@ -232,14 +237,17 @@ body {
     width: 60px;
     border: none !important;
   }
+
   .item:last-child {
     padding-bottom: 40px;
   }
 }
+
 .history__img {
   max-width: 100%;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
 }
+
 .class-container {
   width: 100%;
   position: relative;
@@ -248,6 +256,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
 .class-container:before {
   position: absolute;
   left: 0;
@@ -256,18 +265,21 @@ body {
   height: 100%;
   content: "";
 }
+
 .header {
   width: 100%;
   text-align: center;
   margin-bottom: 80px;
   position: relative;
 }
+
 .header__title {
   color: #fff;
   font-size: 46px;
   font-weight: normal;
   margin: 0;
 }
+
 .header__subtitle {
   color: rgba(255, 255, 255, 0.5);
   font-size: 16px;
@@ -276,6 +288,104 @@ body {
   font-weight: normal;
 }
 
-.btn-color {
-  background: linear-gradient(to right, #ae8141, #1f2937);
+.slider {
+  position: relative;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+.slider .status {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+}
+.slider .status .point {
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  top: -2px;
+  background-color: #ff0;
+  border-radius: 50%;
+  z-index: 15;
+  transition: left 500ms ease-in-out;
+}
+.slider .status .point[data-current='0'] {
+  left: 4px;
+}
+.slider .status .point[data-current='1'] {
+  left: 24px;
+}
+.slider .status .point[data-current='2'] {
+  left: 44px;
+}
+.slider .status .point[data-current='3'] {
+  left: 64px;
+}
+.slider .status .point[data-current='4'] {
+  left: 84px;
+}
+.slider .status .point[data-current='5'] {
+  left: 104px;
+}
+.slider .status .stat {
+  width: 10px;
+  height: 10px;
+  background-color: transparent;
+  border-radius: 50%;
+  z-index: 20;
+  margin: 0px 5px;
+  border: 1px solid #fff;
+}
+.slider .status .stat.current {
+  background-color: #fff;
+}
+.slider .text {
+  position: absolute;
+  color: #ff0;
+  text-shadow: 0 0 5px #000 3;
+  z-index: 20;
+  transform-origin: right top;
+  transform: rotate(-90deg) translateY(calc(-88vh));
+  display: grid;
+  grid-template-columns: 90vh;
+  grid-template-rows: 1fr;
+  font-size: 15vw;
+  text-transform: uppercase;
+}
+@media (min-width: 70em) {
+  .slider .text {
+    font-size: 10em;
+ }
+}
+.slider .text div {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  opacity: 0;
+}
+.slider .text div.current {
+  opacity: .7;
+}
+.slider img {
+  object-fit: cover;
+  object-position: center center;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.slider .image {
+  width: 100%;
+  margin-right: -100%;
+  opacity: 0;
+  overflow: hidden;
+  transform: translateY(0) scale(1.2);
+  z-index: 1;
+}
+.slider .image.current {
+  z-index: 10;
+  transform: translateY(0) scale(1);
+  opacity: 1;
 }
