--- a/styles/globals.css
+++ b/styles/globals.css
@@ -291,8 +291,7 @@ body {
 .slider {
   position: relative;
   display: flex;
-  width: 85vw;
-  height: 85vh;
+  height: 100vh;
   overflow: hidden;
 }
 .slider .status {
@@ -300,6 +299,7 @@ body {
   bottom: 10px;
   right: 10px;
   display: flex;
+  padding-bottom: none !important;
 }
 .slider .status .point {
   position: absolute;
@@ -343,7 +343,7 @@ body {
 }
 .slider .text {
   position: absolute;
-  color: #ff0;
+  color: #fff;
   text-shadow: 0 0 5px #000 3;
   z-index: 20;
   transform-origin: right top;
@@ -351,14 +351,9 @@ body {
   display: grid;
   grid-template-columns: 90vh;
   grid-template-rows: 1fr;
-  font-size: 15vw;
   text-transform: uppercase;
 }
-@media (min-width: 70em) {
-  .slider .text {
-    font-size: 10em;
- }
-}
+
 .slider .text div {
   grid-column-start: 1;
   grid-column-end: 2;
@@ -388,4 +383,12 @@ body {
   z-index: 10;
   transform: translateY(0) scale(1);
   opacity: 1;
+}
+
+.gallerycont {
+  padding-bottom: 0 !important;
+}
+
+.btn-color {
+  background: linear-gradient(to right, #ae8141, #1f2937);
 }
