--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,22 +36,18 @@ body {
 .shimmer {
   text-align: center;
   color: rgb(65, 28, 14, 0.1);
-  background: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    from(#411c0e),
-    to(#411c0e),
-    color-stop(0.5, #fff)
-  );
-  background: gradient(
-    linear,
-    left top,
-    right top,
-    from(#411c0e),
-    to(#411c0e),
-    color-stop(0.1, #fff)
-  );
+  background: -webkit-gradient(linear,
+      left top,
+      right top,
+      from(#411c0e),
+      to(#411c0e),
+      color-stop(0.5, #fff));
+  background: gradient(linear,
+      left top,
+      right top,
+      from(#411c0e),
+      to(#411c0e),
+      color-stop(0.1, #fff));
   background-size: 125px 100%;
   -webkit-background-clip: text;
   background-clip: text;
@@ -309,12 +305,14 @@ body {
   height: 100vh;
   overflow: hidden;
 }
+
 .slider .status {
   position: absolute;
   bottom: 10px;
   right: 10px;
   display: flex;
 }
+
 .slider .status .point {
   position: absolute;
   width: 14px;
@@ -325,24 +323,31 @@ body {
   z-index: 15;
   transition: left 500ms ease-in-out;
 }
+
 .slider .status .point[data-current="0"] {
   left: 4px;
 }
+
 .slider .status .point[data-current="1"] {
   left: 24px;
 }
+
 .slider .status .point[data-current="2"] {
   left: 44px;
 }
+
 .slider .status .point[data-current="3"] {
   left: 64px;
 }
+
 .slider .status .point[data-current="4"] {
   left: 84px;
 }
+
 .slider .status .point[data-current="5"] {
   left: 104px;
 }
+
 .slider .status .stat {
   width: 10px;
   height: 10px;
@@ -352,9 +357,11 @@ body {
   margin: 0px 5px;
   border: 1px solid #fff;
 }
+
 .slider .status .stat.current {
   background-color: #fff;
 }
+
 .slider .text {
   position: absolute;
   color: #fff;
@@ -366,6 +373,7 @@ body {
   grid-template-rows: 1fr;
   text-transform: uppercase;
 }
+
 .slider .text div {
   grid-column-start: 1;
   grid-column-end: 2;
@@ -373,9 +381,11 @@ body {
   grid-row-end: 2;
   opacity: 0;
 }
+
 .slider .text div.current {
   opacity: 0.7;
 }
+
 .slider img {
   object-fit: cover;
   object-position: center center;
@@ -383,6 +393,7 @@ body {
   height: 100%;
   display: block;
 }
+
 .slider .image {
   width: 100%;
   margin-right: -100%;
@@ -391,6 +402,7 @@ body {
   transform: translateY(0) scale(1.2);
   z-index: 1;
 }
+
 .slider .image.current {
   z-index: 10;
   transform: translateY(0) scale(1);
@@ -433,14 +445,14 @@ body {
   border: #ffefcd .125em solid;
   padding: .25em 1em;
   border-radius: 0.25em;
-  text-shadow: 
+  text-shadow:
     0 0 0.125em hsl(0 0% 100% / 0.3),
     0 0 0.45em currentColor;
   box-shadow:
     inset 0 0 0.5em 0 #ffefcd,
     0 0 0.5em 0 #ffefcd;
   position: relative;
-/*   transition: background-color 100ms linear; */
+  /*   transition: background-color 100ms linear; */
 }
 
 .neon-button::before {
@@ -452,14 +464,15 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  
+
   transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
   filter: blur(1em);
   opacity: 0.7;
 }
 
-.neon-button:hover, .neon-button:focus {
-/*   background: var(--clr-neon); */
+.neon-button:hover,
+.neon-button:focus {
+  /*   background: var(--clr-neon); */
   color: #ffefcd;
   text-shadow: none;
 }
@@ -478,9 +491,602 @@ body {
   transition: opacity 100ms linear;
 }
 
-.neon-button:hover::before, .neon-button:focus::before {
+.neon-button:hover::before,
+.neon-button:focus::before {
   opacity: 1;
 }
-.neon-button:hover::after, .neon-button:focus::after {
+
+.neon-button:hover::after,
+.neon-button:focus::after {
   opacity: 1;
+}
+
+.pin-text {
+  font-weight: bolder !important;
+}
+
+@media (max-width: 900px) {
+  .map {
+    position: relative;
+    display: inline-block;
+
+  }
+
+  .map img {
+    max-width: 100%;
+    display: block;
+    border-radius: 5%;
+  }
+
+  .box {
+    width: 12%;
+    height: 12%;
+    background-image: url("../public/images/map/literature.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+
+  #pin-1 {
+    top: 29%;
+    left: 10%;
+  }
+
+  .box>.pin-text {
+    display: block;
+  }
+
+  #pin-2 {
+    top: 49%;
+    left: 37%;
+  }
+
+
+  .box1 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/classical.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box1>.pin-text {
+    display: block;
+  }
+
+  #pin-3 {
+    top: 30%;
+    left: 61%;
+  }
+
+
+  .box2 {
+    width: 20%;
+    height: 20%;
+    background-image: url("../public/images/clubs/Tamil.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box2>.pin-text {
+    display: block;
+    color: white !important;
+  }
+
+  #pin-4 {
+    top: 5%;
+    left: 40%;
+  }
+
+
+  .box3 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/design.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box3>.pin-text {
+    display: block;
+  }
+
+  #pin-5 {
+    top: 20%;
+    left: 55%;
+  }
+
+
+  .box4 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/game.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box4>.pin-text {
+    display: block;
+  }
+
+  #pin-6 {
+    top: 47%;
+    left: 73%;
+  }
+
+
+  .box5 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/theatre.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box5>.pin-text {
+    display: block;
+  }
+
+  #pin-7 {
+    top: 68%;
+    left: 10%;
+  }
+
+
+  .box6 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/quiz.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box6>.pin-text {
+    display: block;
+  }
+
+  #pin-8 {
+    top: 75%;
+    left: 78%;
+  }
+
+
+  .box7 {
+    width: 20%;
+    height: 20%;
+    background-image: url("../public/images/map/film.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box7>.pin-text {
+    display: block;
+  }
+
+  #pin-9 {
+    top: 30%;
+    left: 35%;
+  }
+
+
+  .box8 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/music.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box8>.pin-text {
+    display: block;
+  }
+
+  #pin-10 {
+    top: 75%;
+    left: 40%;
+  }
+
+
+  .box9 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/photograph.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box9>.pin-text {
+    display: block;
+  }
+
+  #pin-11 {
+    top: 5%;
+    left: 5%;
+  }
+
+
+  .box10 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/arts.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box10>.pin-text {
+    display: block;
+  }
+
+  #pin-12 {
+    top: 5%;
+    left: 65%;
+  }
+
+
+  .box11 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/western.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box11>.pin-text {
+    display: block;
+  }
+
+  #pin-13 {
+    top: 45%;
+    left: 12%;
+  }
+
+
+  .box12 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/business.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box12>.pin-text {
+    display: block;
+  }
+
+  .pin-text {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 75%;
+    white-space: nowrap;
+    display: none;
+  }
+
+  .pin-text h3 {
+    color: white;
+    text-shadow: 1px 1px 1px #000;
+  }
+}
+
+
+@media (min-width: 901px) {
+  .map {
+    margin: 10px;
+    position: relative;
+    display: inline-block;
+
+  }
+
+  .map img {
+    max-width: 100%;
+    display: block;
+    border-radius: 5%;
+  }
+
+  .box {
+    width: 12%;
+    height: 12%;
+    background-image: url("../public/images/map/literature.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+
+  #pin-1 {
+    top: 29%;
+    left: 10%;
+  }
+
+  .box:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-2 {
+    top: 49%;
+    left: 37%;
+  }
+
+
+  .box1 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/classical.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box1:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-3 {
+    top: 30%;
+    left: 61%;
+  }
+
+
+  .box2 {
+    width: 20%;
+    height: 20%;
+    background-image: url("../public/images/clubs/Tamil.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box2:hover>.pin-text {
+    display: block;
+    color: white !important;
+  }
+
+  #pin-4 {
+    top: 5%;
+    left: 40%;
+  }
+
+
+  .box3 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/design.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box3:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-5 {
+    top: 20%;
+    left: 55%;
+  }
+
+
+  .box4 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/game.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box4:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-6 {
+    top: 47%;
+    left: 73%;
+  }
+
+
+  .box5 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/theatre.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box5:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-7 {
+    top: 68%;
+    left: 10%;
+  }
+
+
+  .box6 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/quiz.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box6:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-8 {
+    top: 75%;
+    left: 78%;
+  }
+
+
+  .box7 {
+    width: 20%;
+    height: 20%;
+    background-image: url("../public/images/map/film.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box7:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-9 {
+    top: 30%;
+    left: 35%;
+  }
+
+
+  .box8 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/music.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box8:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-10 {
+    top: 75%;
+    left: 40%;
+  }
+
+
+  .box9 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/photograph.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box9:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-11 {
+    top: 5%;
+    left: 5%;
+  }
+
+
+  .box10 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/arts.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box10:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-12 {
+    top: 5%;
+    left: 65%;
+  }
+
+
+  .box11 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/western.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box11:hover>.pin-text {
+    display: block;
+  }
+
+  #pin-13 {
+    top: 45%;
+    left: 12%;
+  }
+
+
+  .box12 {
+    width: 15%;
+    height: 15%;
+    background-image: url("../public/images/map/business.png");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+  }
+
+  .box12:hover>.pin-text {
+    display: block;
+  }
+
+  .pin-text {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 75%;
+    white-space: nowrap;
+    display: none;
+  }
+
+  .pin-text h3 {
+    color: white;
+    text-shadow: 1px 1px 1px #000;
+  }
+}
+
+
+.bxl {
+  background:
+    "linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7))"
 }
